; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/mm/extr_compaction.c_isolation_suitable.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/mm/extr_compaction.c_isolation_suitable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.compact_control = type { i64 }
%struct.page = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.compact_control*, %struct.page*)* @isolation_suitable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @isolation_suitable(%struct.compact_control* %0, %struct.page* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.compact_control*, align 8
  %5 = alloca %struct.page*, align 8
  store %struct.compact_control* %0, %struct.compact_control** %4, align 8
  store %struct.page* %1, %struct.page** %5, align 8
  %6 = load %struct.compact_control*, %struct.compact_control** %4, align 8
  %7 = getelementptr inbounds %struct.compact_control, %struct.compact_control* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %11

10:                                               ; preds = %2
  store i32 1, i32* %3, align 4
  br label %17

11:                                               ; preds = %2
  %12 = load %struct.page*, %struct.page** %5, align 8
  %13 = call i32 @get_pageblock_skip(%struct.page* %12)
  %14 = icmp ne i32 %13, 0
  %15 = xor i1 %14, true
  %16 = zext i1 %15 to i32
  store i32 %16, i32* %3, align 4
  br label %17

17:                                               ; preds = %11, %10
  %18 = load i32, i32* %3, align 4
  ret i32 %18
}

declare dso_local i32 @get_pageblock_skip(%struct.page*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
